--- a/src/components/NomarFile/index.less
+++ b/src/components/NomarFile/index.less
@@ -1,6 +1,7 @@
 @import '../../styles/index.less';
 
 .@{prefixCls}-file {
+  margin: 0.2rem 0rem;
   &-content {
     padding-left: 15 * @hd;
     padding-top: 6 * @hd;
