--- a/src/components/NomarFile/index.less
+++ b/src/components/NomarFile/index.less
@@ -25,5 +25,6 @@
     text-overflow: ellipsis;
     word-break: break-all;
     max-width: calc(100% - 18 * @hd);
+    line-height: calc(@alita-dform-value-font-size + 0.15rem);
   }
 }
