fix(样式): switch

--- a/src/components/NomarSwitch/index.less
+++ b/src/components/NomarSwitch/index.less
@@ -1,9 +1,15 @@
 @import '../../styles/index.less';
 
 .@{prefixCls}-switch {
+  height: @alita-dform-height;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.@{prefixCls}-switch-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin-top: 10px;
 }
